# BayesFilter

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  custom_call_status_stub.cc  memory.md
.local_sources/highdim_nonlinear_filtering/: fokker_planck_tt_cross_pmc8366026.html  fokker_planck_tt_cross_pmc8366026_pow_html.html  low_rank_tensor_ukf_tractography_gruen_2023_invalid_html.html  openalex_arasaratnam_haykin_ckf.json  openalex_arulampalam_pf_tutorial.json  openalex_betancourt_hmc.json  openalex_cites_jia_hdcf_2013.json  openalex_cites_jia_sgqf_2012.json  openalex_cites_oseledets_tt_2011.json  openalex_cites_parno_transport_mcmc.json  openalex_cites_reich_ensemble_transform.json  openalex_cites_spantini_transport_filtering.json  openalex_exact_betancourt_hmc.json  openalex_girolami_calderhead_rmhmc.json  openalex_hoffman_gelman_nuts.json  openalex_jia_hdcf_2013.json  openalex_jia_sgqf_2012.json  openalex_li_wang_yau_zhang_tt_filtering.json  openalex_neal_hmc_search.json  openalex_oseledets_tt_2011.json  openalex_parno_transport_mcmc.json  openalex_reich_ensemble_transform.json  openalex_snyder_obstacles_pf.json  openalex_spantini_transport_filtering.json  openalex_zhao_cui_jmlr_2024.json  tt_sampling_multivariate_densities_springer_09910z.html
.localsource/dpf_ot_audit/: cuturi2013_sinkhorn_distances.txt  (+7 more)
bayesfilter/: __init__.py  experimental_batched_value_score.py
docs/: main.tex  main_highdim_restart_staging.tex  preamble.tex  references.bib  source_map.yml
scripts/: audit_ledh_clean_xla.py  audit_ledh_no_autodiff.py  benchmark_kalman_qr_analytic_vs_autodiff_score.py  collect_ledh_clean_xla_phase6_metrics.py  collect_ledh_clean_xla_phase7_validation.py  dpf_v2_algorithm_full_comparison_claude_readonly_review.sh  dpf_v2_algorithm_full_comparison_live_gate.py  dpf_v2_algorithm_full_comparison_live_gated_launch.sh  dpf_v2_algorithm_full_comparison_live_supervisor.sh  filtering_value_gradient_benchmark_emit_generalized_sv_spec.py  filtering_value_gradient_benchmark_emit_matrices.py  filtering_value_gradient_benchmark_emit_p8_blocker_closure.py  filtering_value_gradient_benchmark_emit_p8_blocker_fix_gates.py  filtering_value_gradient_benchmark_emit_source_paper_scope.py  filtering_value_gradient_benchmark_emit_synthetic_truth.py  filtering_value_gradient_benchmark_generate_p8_datasets.py  filtering_value_gradient_benchmark_run_p8_numeric.py  filtering_value_gradient_benchmark_run_p8d_numeric.py  monitor_large_particle_p03_gpu1.sh  p44_closeout_audit.py  p44_overnight_gated_launch.sh  p44_overnight_supervisor.sh  p44_phase_gate.py  p45_phase_gate.py  p59_author_sir_m9_runner_manifest.py  p67_author_sir_adjacent_ladder_diagnostics.py  p69_phase5c_rank_activity_degree_normalizer_diagnostic.py  p70_phase6_rank_channel_normalizer_diagnostic.py  p70_phase6c_first_row_root_cause_diagnostic.py  p70_phase6h_root_cause_probes.py  p71_phase3_numeric_evaluator_value_finite_probe.py  p71_phase4d_validate_ladder_artifact.py  p72_support_certified_lower_gate_diagnostic.py  p73_density_aware_renewal_diagnostic.py  p75_capacity_sample_ladder.py  p75_stochastic_density_training_pilot.py  p76_bounded_ukf_minibatch_pilot.py  p76_corrected_heldout_metric_smoke.py  p76_generated_corrected_metric_diagnostic.py  p76_tiny_ukf_initializer_smoke.py  (+26 more)
tests/: conftest.py  test_actual_sir_low_rank_route_validation.py  test_actual_sir_low_rank_tuning_grid.py  test_actual_sir_nystrom_compiled_redo.py  test_actual_sir_nystrom_default_promotion.py  test_actual_sv_srukf_tf.py  test_actual_sv_two_lane_benchmark_script.py  test_audit_ledh_clean_xla.py  test_audit_ledh_no_autodiff.py  test_batched_svd_sigma_point_custom_gradient_public_api.py  test_batched_value_score.py  test_common_inference_runtime_contracts.py  test_contract_e_cholesky_ridge_reset.py  test_contract_e_gpu_score_hmc_gate.py  test_contract_e_phase3_gradient_route_audit.py  test_contract_e_phase3_material_manual_route.py  test_contract_e_phase3_r1_design_artifacts.py  test_contract_e_phase3_r2_reset_decision_artifacts.py  test_contract_e_phase3_r5_manual_reverse_integration.py  test_contract_e_phase3_r6_tiny_time_loop_reverse_scan.py  test_contract_e_phase3_r7_lgssm_manual_route.py  test_dense_iaf_neutra_artifact_loader.py  test_deterministic_lgssm_hmc_tuning_driver.py  test_experimental_batched_benchmark_harness.py  test_experimental_batched_ledh_pfpf_ot_streaming_tf.py  test_experimental_batched_ledh_pfpf_ot_tf.py  test_experimental_batched_linear_kalman_tf.py  test_experimental_batched_svd_sigma_point_nonlinear_tf.py  test_experimental_batched_svd_sigma_point_output_cotangents.py  test_experimental_batched_svd_sigma_point_tf.py  test_experimental_batched_value_score_interface.py  test_fixed_sgqf_audit_tf.py  test_fixed_sgqf_branch_contract_tf.py  test_fixed_sgqf_integration_tf.py  test_fixed_sgqf_scores_tf.py  test_fixed_sgqf_testing_integration_tf.py  test_fixed_sgqf_tf.py  test_fixed_sgqf_values_tf.py  test_fixed_sgqf_verification_tf.py  test_fixed_trajectory_hmc_tuning.py  (+130 more)
(+7070 files in other folders)
